--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,15 +10,16 @@ p{
 }
 /*divs*/
 div{
+    width: 25%;
     background-color: white;
     border: 2px solid maroon;
-    height: 120px;
+    height: 140px;
     margin: 20px;
     padding: 20px;
     float: left;
     text-align: center;
 }
-div.emp, div.info{
+div.emp, div.hire, div.info{
     clear: both;
     width: 60%;
     height: auto;
@@ -31,16 +32,16 @@ table, td, th{
     padding: 5px;
 }
 table{
-    width: 33%;
+    width: 30%;
     border-collapse: collapse;
     margin: auto;
     margin-top: 10px; 
     display:inline-table
 }
 /*input*/
-button, input[type=text], [type=email], [type=password], [type=search], [type=submit], [type=number]{
-    margin: 10px;
-    padding: 5px;
+button, input[type=text], [type=email], [type=password], [type=search], [type=submit], [type=number], [type=brow]{
+    margin: 3px;
+    padding: 3px;
 }
 textarea{
     margin-top: 10px;
