--- a/templates/hire_form.html
+++ b/templates/hire_form.html
@@ -7,8 +7,8 @@
             <p>Imię*<input type="text" id="first" name="first"></p>
             <p>Nazwisko*<input type="text" id="last" name="last"></p>
             <p>Stanowisko*<input type="text" id="title" name="title"></p>
-            <p>Rok urodzenia<input type="number" id="born" name="born"></p>
-            <p>Początek pracy<input type="number" id="start" name="start"></p>
+            <p>Rok urodzenia<input type="number" id="born" name="born" min="1950"></p>
+            <p>Początek pracy<input type="number" id="start" name="start" min="1970"></p>
             <p>Narodowość<input type="text" id="nation" name="nation"></p>
             <p>
                 Wybierz przełożonego*
